# ijkPublic

./: .gitignore  README
include/: ijkIO.tpp  ijkNrrd.h  ijk_macros.h  ijkbits.tpp  ijkcheck_geom.tpp  ijkcommand_line.tpp  ijkcontourtree.tpp  ijkcontourtreeIO.tpp  ijkcoord.tpp  ijkcube.tpp  ijkdatatable.tpp  ijkdistance.tpp  ijkenum.tpp  ijkfacet_intersection_table.tpp  ijkgraph.tpp  ijkgrid.tpp  ijkgrid_func.tpp  ijkgrid_macros.h  ijkgrid_nrrd.tpp  ijkhash.tpp  ijkinterpolate.tpp  ijkisoIO.tpp  ijkisocoord.tpp  ijkisopoly.tpp  ijklist.tpp  ijkmap.tpp  ijkmerge.tpp  ijkmesh.tpp  ijkmesh2D_angle.tpp  ijkmesh2D_angle_triangle.tpp  ijkmesh2D_datastruct.tpp  ijkmesh2D_geom.tpp  ijkmesh2D_split.tpp  ijkmesh2D_splitII.tpp  ijkmesh2D_triangulate.tpp  ijkmesh2D_triangulateE.tpp  ijkmesh2D_triangulateRT.tpp  ijkmesh_cpp11.tpp  ijkmesh_datastruct.tpp  ijkmesh_faces.tpp  (+24 more)
isotable/: iso.cube.sepNeg.3D.xit  iso.cube.sepPos.3D.xit  iso.nep.cube.3D.xit  iso.pyramid.3D.xit  iso.simplex.3D.xit  iso.sprism.3D.xit  ivol.cube.3D.xit
lib/: README
src/ijkMCtable/: CMakeLists.txt  README  announce  clarkson_hull.c  ijkMCtable.h  ijkMCtableV2.xsd  ijkMCtable_ambig.cpp  ijkMCtable_doxygen.config  ijkMCtable_invert.cpp  ijkMCtable_orient.tpp  ijkMCtable_poly.cpp  ijkMCtable_properties.h  ijkMCtable_xitIO.cpp  ijkMCtable_xitIO.h  ijkMCtableinfo.cpp  ijkdiffMCtable.cpp  ijkgenMCpatch.cpp  ijkgenMCpatch.h  ijkgenMCtable.cpp  ijktext2c.cpp  outambigtable.cpp  testijkgenMCtable.pl  testinvert.pl
src/ijkMCtable/Old/: ijkMCtable_orient-01-18-2024.tpp
src/ijkdual/: CMakeLists.txt  ijkdual.tpp  ijkdualIO.cpp  ijkdualIO.h  ijkdualIO.tpp  ijkdual_constants.h  ijkdual_datastruct.cpp  ijkdual_datastruct.h  ijkdual_doxygen.config  ijkdual_extract.tpp  ijkdual_isosurface.tpp  ijkdual_main.cpp  ijkdual_mesh.tpp  ijkdual_position.tpp  ijkdual_query.tpp  ijkdual_triangulate.tpp  ijkdual_types.h
src/ijkdual/CTest/: CMakeLists.txt
src/ijkdualtable/: CMakeLists.txt  ijkdualtable.tpp  ijkdualtableX.tpp  ijkdualtable_vert.tpp  testdualtable.cpp
src/ijkgenscalar/: CMakeLists.txt  ijkgencoord.tpp  ijkgengeom.tpp  ijkgenscalar.cpp  ijkgenscalar.cxx  ijkgenscalar.h  ijkgenscalar.tpp  ijkgenscalarIO.cpp  ijkgenscalarIO.cxx  ijkgenscalarIO.h  ijkgradientfield.tpp  ijkscalarfield.tpp
src/ijkmcube/: CMakeLists.txt  ijkMCtable.cpp  ijkMCtable_ambig.h  ijkMCtable_poly.h  ijkmcube.cpp  ijkmcube.h  ijkmcubeIO.cpp  ijkmcubeIO.h  ijkmcube_datastruct.cpp  ijkmcube_datastruct.h  ijkmcube_doxygen.config  ijkmcube_extract.cpp  ijkmcube_extract.h  ijkmcube_main.cpp  ijkmcube_sub.cpp  ijkmcube_sub.h  ijkmcube_types.h  ijkmcube_util.cpp  ijkmcube_util.h  ijkoctree.cpp  ijkoctree.h  ijksnapmc.cpp  ijksnapmc.h
src/ijkmesh/: CMakeLists.txt  ijkmesh.cpp  ijkmesh.h
src/ijkmeshdiff/: CMakeLists.txt  ijkmeshdiff.cpp
src/ijkmeshinfo/: CMakeLists.txt  ijkmeshinfo.cpp  ijkmeshinfo.h  ijkmeshinfoIO.cpp  ijkmeshinfoIO.h  ijkmeshinfoIO.tpp  ijkmeshinfo_compute.cpp  ijkmeshinfo_compute.h  ijkmeshinfo_compute.tpp
src/ijkmeshinfo/CTest/: CMakeLists.txt
src/ijkscalarinfo/: CMakeLists.txt  ijkscalarinfo.cpp  ijkscalarinfo.h  ijkscalarinfo_doxygen.config
